#                                                                                          #
#                                      Changelog                                           #
#                                                                                          #
############################################################################################

[63] --> Fix Evade (Test).
[62] --> Core/Maps: Merge some changes to GetHeight Calculation.
[61] --> Fix Death Knight: Death and Decay.
[60] --> Fix Priest: Shadowfiend.
[59] --> Fix Sap removes Stealth.
[58] --> Fix [Warlock] Chaos Bolt.
         - "Chaos Bolt cannot be resisted, and pierces through all absorption effects."
[57] --> Removes Master's Call stun immunity.
[56] --> [ICC] Fix Lich King.
[55] --> Fix Earthbind totem effect and Wandering plague.
[54] --> [Spells/Hunter] Fix Misdirection.
[53] --> Add Scripts: Brewfest Festival.
[52] --> Fix crash 'arena_run_reg_alloc'.
[51] --> Add Scripts/Halls Of Lightning (thx Cashew).
[50] --> Add Scripts/Halls Of Stone (thx Cashew).
[49] --> Add Scripts/Halls Of Reflection (thx Cashew).
[48] --> Pet: Return to player in passive reactstate if commandstate is follow.
[47] --> Add Scripts/Ruby Sanctum: Halion (thx Warpten).
[46] --> Updated script Transmogrification and fix crash gargoyle.
[45] --> [Argent Tournament] Fix Npc Lake Frog.
[44] --> Revert 'Fix Pet CD After Summon.'.
[43] --> Fix [Warrior] T10 4P Bonus.
[42] --> [Death Grip] Fix castable while jumping/falling.
[41] --> Fix pets scaling HP.
[40] --> Fix Pet CD After Summon.
[39] --> Add AutoBanned Passive Anticheat System!
[38] --> [Censor] Update vulgar slang.
[37] --> Reset Duel Cooldowns, Hp, Mana, Rage and Runic Power in Astranaar.
[36] --> [Censor] Update vulgar slang.
[35] --> Add Admin Announce Command.
[34] --> GM Account can chat at 2 faction.
[33] --> Add script Allow Two Side Interaction Chat.
[32] --> Add Armory Patch.
[31] --> Fix crash script Chat Censure.